Tried to fix image aspect ratio on iphone

--- a/css/home.css
+++ b/css/home.css
@@ -13,11 +13,18 @@ body {
     padding: 0;
     overflow-x: hidden;
 }
+
 p {
     color: var(--darkGrey);
     font-size: 1em;
     font-family: var(--secondaryFont);
 }
+
+img {
+    width: 100% !important;
+    height: auto !important;
+}
+
 .btn-primary {
     background-color: var(--darkPink) !important;
     border: none !important;
@@ -28,9 +35,11 @@ p {
     position: relative !important;
     background-color: var(--darkPink) !important;
 }
+
 .heroHome {
     position: relative;
 }
+
 .heroHome h1{
     font-family: var(--mainFont);
     display: block;
@@ -38,20 +47,23 @@ p {
     color: white;
     line-height: 0.8em;
 }
+
 .heroHome p{
     color: white;
     display: block;
     padding: 5px 5px 10px;
 }
+
 .heroHome img {
     position: absolute;
     object-fit: cover;
-    height: 100%;
-    width: 100%;
+    height: 100% !important;
+    width: 100% !important;
     z-index: -1;
     filter: brightness(50%);
     filter: blur(50%);
 }
+
 .events {
     background-color: var(--lightPink);
 }
@@ -148,8 +160,8 @@ p {
 .logo {
     margin-top: 10px;
     margin-bottom: 0px;
-    height: 25%;
-    width: 25%;
+    height: 25% !important;
+    width: 25% !important;
     background-position: cover;
     padding: 0;
 }
