--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,11 @@ p {
     font-family: var(--secondaryFont);
 }
 
+img {
+    width: 100% !important;
+    height: auto !important;
+}
+
 /* SLIDENAV */
 
 .sidenav {
